--- a/src/main/resources/com/thales/schoolmanagingjfx/gestionGrade.fxml
+++ b/src/main/resources/com/thales/schoolmanagingjfx/gestionGrade.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.thales.schoolmanagingjfx.controller.GestionMatiereController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.thales.schoolmanagingjfx.controller.GestionGradeController">
     <top>
         <fx:include fx:id="enTete" source="entete.fxml" />
     </top>
@@ -29,7 +30,7 @@
                     </children>
                 </VBox>
                 <Pane prefHeight="450.0" prefWidth="44.0" />
-                <VBox prefHeight="450.0" prefWidth="364.0">
+                <VBox alignment="CENTER_RIGHT" prefHeight="450.0" prefWidth="364.0">
                     <children>
                         <Label alignment="CENTER" prefHeight="53.0" prefWidth="364.0" text="Créer/Modifier" textAlignment="CENTER" textFill="#017e7a">
                             <font>
@@ -37,7 +38,7 @@
                             </font>
                         </Label>
                         <Pane prefHeight="8.0" prefWidth="402.0" style="-fx-background-color: #e4de9b;" />
-                        <Pane prefHeight="51.0" prefWidth="364.0" />
+                        <Pane prefHeight="24.0" prefWidth="364.0" />
                         <HBox alignment="CENTER_LEFT" prefHeight="44.0" prefWidth="364.0">
                             <children>
                                 <Label text="ID Classe :   ">
@@ -45,7 +46,7 @@
                                         <Font name="System Bold" size="16.0" />
                                     </font>
                                 </Label>
-                                <Label fx:id="lbId" prefHeight="18.0" prefWidth="186.0" text="ID????">
+                                <Label fx:id="lbId" prefHeight="18.0" prefWidth="186.0" text="ID????" visible="false">
                                     <font>
                                         <Font name="System Bold" size="16.0" />
                                     </font>
@@ -80,8 +81,14 @@
                         </TextField>
                             </children>
                         </HBox>
-                        <Pane prefHeight="54.0" prefWidth="364.0" />
+                  <Label prefHeight="39.0" prefWidth="364.0" text="Professeur principal :">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="cbListProf" prefHeight="25.0" prefWidth="258.0" />
                         <Pane prefHeight="8.0" prefWidth="402.0" style="-fx-background-color: #e4de9b;" />
+                        <Pane prefHeight="13.0" prefWidth="364.0" />
                         <HBox alignment="CENTER" prefHeight="85.0" prefWidth="364.0">
                             <children>
                                 <Button fx:id="btnClear" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" text="Clear">
@@ -96,7 +103,7 @@
                                     </font>
                                 </Button>
                                 <Pane prefHeight="100.0" prefWidth="40.0" />
-                                <Button fx:id="BtnSup" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" text="Supprimer">
+                                <Button fx:id="btnSup" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" text="Supprimer">
                                     <font>
                                         <Font name="System Bold" size="12.0" />
                                     </font>
@@ -114,9 +121,6 @@
     <right>
         <Pane prefHeight="450.0" prefWidth="27.0" BorderPane.alignment="CENTER" />
     </right>
-    <top>
-        <Pane prefHeight="100.0" prefWidth="900.0" BorderPane.alignment="CENTER" />
-    </top>
     <bottom>
         <Pane prefHeight="20.0" prefWidth="900.0" BorderPane.alignment="CENTER" />
     </bottom>
